--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ asgiref==3.8.1
 Django==5.0.6
 sqlparse==0.5.0
 tzdata==2024.1
+coverage==5.3.1
+flake8==3.8.4
+mccabe==0.6.1
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pytz==2020.5
