--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,7 @@ jobs:
     - name: Django Testing
       run: |
         python3 manage.py test
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        flake8
